--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-plugin-add-react-displayname": "0.0.3",
     "boom": "^4.3.1",
     "classnames": "^2.2.5",
+    "crypto-js": "^3.1.9-1",
     "deepcopy": "^0.6.3",
     "ejs": "^2.5.2",
     "emoji-datasource-apple": "^4.0.4",
